fix white space

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,8 @@ ol.q {
     color: red;
 }
 
-#about {
+#about,
+#conact {
     text-align: center;
 }
 
@@ -99,7 +100,7 @@ li a {
 }
 
 .fab {
-    padding: 5px;
+    padding: 7px;
     color: gray;
 }
 
@@ -120,9 +121,4 @@ li a {
 
 .jeelio {
     width: 400px;
-}
-
-.contact-icon {
-    margin-left: auto;
-    margin-right: auto;
 }
